--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -1,3 +1,5 @@
+@use 'breakpoints' as *;
+
 /* Basic styles */
 
 .nav-wrapper {
@@ -39,6 +41,11 @@ nav {
         img {
             height: 100px;
             width: 100px;
+
+            @media (max-width: $mobile){
+              height: 80px;
+              width: 80px;
+            }
         }
     }
     .item {
